Added comment to additional.css

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,86 @@ images/100/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
 ._index.php
 ._jquery-3.5.1.min.js
 .DS_Store
+metadata.tsv
+images/101/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/102/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/103/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/104/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/105/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/106/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/107/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/108/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/109/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/111/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/112/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/113/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/115/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/116/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/117/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/118/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/119/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/120/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/121/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/122/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/124/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/125/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/128/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/129/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/131/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/33/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/34/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/35/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/36/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/37/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/38/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/39/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/40/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/41/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/43/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/44/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/45/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/46/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/48/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/53/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/56/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/57/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/58/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/59/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/60/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/61/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/62/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/63/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/64/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/65/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/66/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/67/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/68/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/69/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/70/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/71/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/72/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/73/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/74/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/75/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/76/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/77/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/78/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/79/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/83/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/84/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/85/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/86/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/87/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/89/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/90/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/91/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/92/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/93/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/94/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/95/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/96/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/97/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/98/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/99/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+images/About/_photoOptimizeBackupID_DARK-RAINBOW%5CMitch
+PHP/sql_auth.php
